<resources>
    <string name="app_name">Fucha</string>
    <string name="sign_in_button">Zaloguj się !</string>
    <string name="signup_title">albo zarejestruj</string>
    <string name="login_hint_name">login</string>
    <string name="password_hint_text">password</string>
    <string name="fill_login_field">wypełnij pole login</string>
    <string name="fill_password_field">Uzupełnij pole hasło</string>
    <string name="wrong_login_credentials_toast">Zły login lub hasło. Spróbuj ponownie</string>
    <string name="menu_my_account">Moje konto</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_job_history">Historia fuch</string>
    <string name="menu_add_job">Dodaj fuche</string>
    <string name="title_activity_add_new_job">AddNewJobActivity</string>
    <string name="something_went_wrong_msg">Coś poszło nie tak</string>
    <string name="job_name">Nazwa fuchy</string>
    <string name="job_category">Rodzaj fuchy</string>
    <string name="job_description">Opis fuchy</string>
    <string name="next_button">Dalej</string>
    <string name="job_expire_date">Fucha ważna do</string>
    <string name="cost_name">Stawka</string>
    <string name="address">Adres</string>
    <string name="street">Ulica</string>
    <string name="building_nr">Numer domu</string>
    <string name="flat_nr">Numer mieszkania</string>
    <string name="city">Miejscowość</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="add_job_button">Dodaj fuche</string>
    <string name="job_added_msg">Fucha została dodana. Po sprawdzeniu zostanie ona opublikowana</string>
    <string name="back_to_home_screen">Powrót</string>
    <string name="fill_job_name_field">Wypełnij pole</string>
    <string name="fill_job_decription_field">Wypełnij pole</string>
    <string name="select_date_name_button">Wybierz date...</string>
    <string name="back_to_home_activity">Powrót do menu głównego</string>
    <string name="details">Szczegóły</string>
    <string name="take_job">Biorę fuchę !</string>
    <string name="header_welcome"> Witaj, </string>
    <string name="jobs_in_your_area">Fuchy w twojej okolicy</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="job_has_been_added">Fucha została dodana. Sprawdź swoje Fuchy w menu</string>
    <string name="job_is_already_assigned">Fucha została juz zajęta :(</string>
    <string name="mark_job_as_done">Fucha zrobiona !</string>
    <string name="job_has_been_marked_as_finished">Fucha została oznaczona jako zrobiona</string>
    <string name="refresh">Odśwież</string>

</resources>
