<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_my_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/menu_item_job_history"
            android:icon="@drawable/ic_job_history_24dp"
            android:title="@string/menu_job_history" />
        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/menu_item_logout"
            android:icon="@drawable/ic_logout_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>