<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pueblo.software.base.activites.LoginActivity">


    <Button
        android:id="@+id/doLoginButtonId"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:background="@drawable/button_background"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:text="@string/sign_in_button" />

    <EditText
        android:id="@+id/loginInputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passwordInputId"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="210dp"
        android:ems="10"
        android:hint="@string/login_hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordInputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:ems="10"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword" />
</RelativeLayout>
